--- a/src/templates/_header.ejs
+++ b/src/templates/_header.ejs
@@ -5,29 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css">
     <title>CRUD | Blog</title>
   </head>
   <body>
-    <div class="container">
-    <header>
-      <nav class="navbar navbar-expand-lg bg-dark">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <i class="far fa-plus"></i>
-          </a>
-        </li>
-      </nav>
-    </header>
-    <main>
+    
+      <header class="navbar navbar-expand-lg bg-black d-flex justify-content-end" >
+        <ul class="navbar-nav p-2">
+          <li class="nav-item">
+            <a href="/login" class="nav-link text-white font-size-xl">Login</a>
+          </li>
+          <li class="nav-item">
+            <a href="/register" class="nav-link text-white">Register</a>
+          </li>
+          <li class="nav-item">
+            <a href="/create" class="nav-link text-white">
+              <i class="fa-regular fa-plus fa-xl"></i>
+            </a>
+          </li>
+        </ul>
+      </header>
+      <main class="d-flex align-items-center mt-4">
+        <div class="container bg-light m-auto w-50">
