--- a/src/templates/update.ejs
+++ b/src/templates/update.ejs
@@ -1,6 +1,6 @@
 <%- include("_header") %>
 
-<h1>Create Post</h1>
+<h1>Update Post</h1>
 
 <form action="/create" method="post">
   <div class="form-horizontal">
