--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -12,10 +12,10 @@
       <small class="text-muted">Last updated 3 mins ago</small>
     </p>
   </div>
-  <a href="/update/<%= post.ID %>" class="btn btn-sm btn-warning">
+  <a href="/update/<%= post._id %>" class="btn btn-sm btn-warning">
     <i class="far fa-edit"></i>
   </a>
-  <a href="/delete/<%= post.ID %>?_method=DELETE" class="btn btn-sm btn-danger">
+  <a href="/delete/<%= post._id %>?_method=DELETE" class="btn btn-sm btn-danger">
     <i class="far fa-trash"></i>
   </a>
   <i class="far fa-heart"></i>
