--- a/src/templates/_header.ejs
+++ b/src/templates/_header.ejs
@@ -15,7 +15,7 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <title>CRUD | Blog</title>
   </head>
   <body>
@@ -30,7 +30,7 @@
           </li>
           <li class="nav-item">
             <a href="/create" class="nav-link text-white">
-              <i class="fa-regular fa-plus fa-xl"></i>
+              <i class="bi bi-plus-square"></i>
             </a>
           </li>
         </ul>
