--- a/src/templates/create.ejs
+++ b/src/templates/create.ejs
@@ -4,15 +4,18 @@
 
 <form action="/create" method="post">
   <div class="form-horizontal">
+    <%- include('_editor') %>
 
-      <%- include('_editor') %>
-
-      <div class="form-group row">
-          <div class="d-flex justify-content-end gap-4">
-              <input type="submit" value="Create" class="btn btn-default btn-success">
-              <a href="/" class="btn btn-outline-dark">Cancel</a>
-          </div>
+    <div class="form-group row">
+      <div class="d-flex justify-content-end gap-4">
+        <input
+          type="submit"
+          value="Create"
+          class="btn btn-default btn-success"
+        />
+        <a href="/" class="btn btn-outline-dark">Cancel</a>
       </div>
+    </div>
   </div>
 </form>
 
