--- a/src/templates/_header.ejs
+++ b/src/templates/_header.ejs
@@ -15,25 +15,30 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css"
+    />
     <title>CRUD | Blog</title>
   </head>
   <body>
-    
-      <header class="navbar navbar-expand-lg bg-black d-flex justify-content-end" >
-        <ul class="navbar-nav p-2">
-          <li class="nav-item">
-            <a href="/login" class="nav-link text-white font-size-xl">Login</a>
-          </li>
-          <li class="nav-item">
-            <a href="/register" class="nav-link text-white">Register</a>
-          </li>
-          <li class="nav-item">
-            <a href="/create" class="nav-link text-white">
-              <i class="bi bi-plus-square"></i>
-            </a>
-          </li>
-        </ul>
-      </header>
-      <main class="d-flex align-items-center mt-4">
-        <div class="container bg-light m-auto w-50">
+    <header class="navbar navbar-expand-lg bg-black d-flex justify-content-end">
+      <ul class="navbar-nav p-2">
+        <li class="nav-item">
+          <a href="/login" class="nav-link text-white font-size-xl">Login</a>
+        </li>
+        <li class="nav-item">
+          <a href="/register" class="nav-link text-white">Register</a>
+        </li>
+        <li class="nav-item">
+          <a href="/logout" class="nav-link text-white">Logout</a>
+        </li>
+        <li class="nav-item">
+          <a href="/create" class="nav-link text-white">
+            <i class="bi bi-plus-square"></i>
+          </a>
+        </li>
+      </ul>
+    </header>
+    <main class="d-flex align-items-center mt-4">
+      <div class="container bg-light m-auto w-50">
