added comment router

--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -26,6 +26,9 @@
       </a>
     <% } %>
     <div class="d-flex gap-4 justify-content-end">
+      <a href="/comment/<%= post._id %>" class="btn btn-sm">
+        <i class="bi bi-chat-left-dots"></i>
+      </a>
       <a href="/update/<%= post._id %>" class="btn btn-sm">
         <i class="bi bi-pencil-square"></i>
       </a>
