--- a/src/templates/_header.ejs
+++ b/src/templates/_header.ejs
@@ -22,7 +22,10 @@
     <title>CRUD | Blog</title>
   </head>
   <body>
-    <header class="navbar navbar-expand-lg bg-black d-flex justify-content-end">
+    <header class="navbar navbar-expand-lg bg-black d-flex justify-content-between p-2">
+      <a href="/" class="nav-link text-white font-size-xl p-2">
+        HOME
+      </a>
       <ul class="navbar-nav p-2">
         <li class="nav-item">
           <a href="/login" class="nav-link text-white font-size-xl">Login</a>
